--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.17",
     "next": "^13.4.19",
@@ -30,6 +32,7 @@
     "sanity-plugin-media": "^2.2.2",
     "styled-components": "^6.0.7",
     "suspend-react": "^0.1.3",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
