--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/env": "^13.4.19",
     "@portabletext/react": "^3.0.4",
     "@sanity/cli": "^3.15.1",
+    "@sanity/image-url": "^1.0.2",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -26,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-medium-image-zoom": "^5.1.8",
     "sanity": "^3.15.1",
     "sanity-plugin-asset-source-unsplash": "^1.1.0",
     "sanity-plugin-iframe-pane": "^2.5.5",
