--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "blog-press",
+  "name": "blogpress---template",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name" : "Arth K. Gajjar",
+    "email" : "iarthstar@gmail.com",
+    "url" : "https://github.com/iarthstar"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -29,9 +34,12 @@
     "react-icons": "^4.10.1",
     "react-medium-image-zoom": "^5.1.8",
     "sanity": "^3.15.1",
+    "sanity-pills": "^1.13.0",
     "sanity-plugin-asset-source-unsplash": "^1.1.0",
+    "sanity-plugin-draft-review-v3": "^0.0.4",
     "sanity-plugin-iframe-pane": "^2.5.5",
     "sanity-plugin-media": "^2.2.2",
+    "sanity-plugin-vercel-deploy": "^3.3.4",
     "styled-components": "^6.0.7",
     "suspend-react": "^0.1.3",
     "tailwind-merge": "^1.14.0",
