--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "private": false,
   "license": "MIT",
   "author": {
-    "name" : "Arth K. Gajjar",
-    "email" : "iarthstar@gmail.com",
-    "url" : "https://github.com/iarthstar"
+    "name": "Arth K. Gajjar",
+    "email": "iarthstar@gmail.com",
+    "url": "https://github.com/iarthstar"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "local": "yarn"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run build"
+    }
   },
   "dependencies": {
     "@next/env": "^13.4.19",
@@ -46,5 +52,8 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "husky": "^8.0.3"
   }
 }
